# fpds

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  script.py  setup.cfg  setup.py
.github/: labeler.yml  release.yml
.github/workflows/: labeler.yml  publish.yml  push.yml  test-package.yml
src/: transform.py
src/fpds/: __init__.py  base.py  config.py  errors.py  parser.py  resources.py
src/fpds/cli/: __init__.py  fpds.py  parse.py
src/fpds/constants/: elements.py  fields.json
src/fpds/core/: __init__.py  _xml.py  mixins.py  parser.py  test.py  xml.py
src/fpds/core/constants/: fields.json  vars.py
src/fpds/core/exceptions/: __init__.py  errors.py
src/fpds/models/: base.py  data.py
src/fpds/scripts/: test.py
src/fpds/targets/: postgres.py
src/fpds/tests/: test_cli.py  test_parser.py  test_xml.py
src/fpds/utilities/: __init__.py  db.py  decorators.py  params.py  tests.py
src/utils/: xml.py
tests/: __init__.py  test_cli.py  test_parser.py  test_xml.py  utilities.py
tests/data/: full_response.xml  truncated_response.xml
