[project]
name = "fpds"
authors = [{name = "Derek Herincx", email = "derek663@gmail.com"}]
description = "A parser for the Federal Procurement Data System (FPDS) Atom feed"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["fpds", "python", "atom feed", "cli", "xml"]
version = "1.4.1"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "aiohttp==3.9.1",
    "click>=8.1.3"
]

[project.urls]
Repository = "https://github.com/dherincx92/fpds"
Issues = "https://github.com/dherincx92/fpds/issues"

[project.optional-dependencies]
dev = [
    "ipdb==0.13.9",
    "ipython==8.5.0",
    "black>=21.6b0",
    "flake8>=3.9.2",
    "isort>=5.9.3",
    "mypy>=0.910",
    "pytest>=6.2.4",
    "pytest-cov>=2.12.1",
    "pytest-runner>=5.3.1",
    "types-requests==2.27.31",
    "types-tqdm==4.64.7.9"
]
tests = [
  "pytest==7.1.3",
  "pytest-cov==3.0.0",
  "pytest-runner==6.0.0",
]
packaging = [
    "build==0.8.0",
    "wheel==0.37.1",
    "twine==5.1.1",
]

[project.scripts]
fpds = "fpds.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fpds = ["*.json"]

[build-system]
requires = [
    'setuptools >= 44',
    'wheel >= 0.30',
    'setuptools_scm[toml]>=3.4',
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.coverage.run]
branch = false

[tool.mypy]
python_version = "3.8"
mypy_path = "stubs"
ignore_missing_imports = true
