[project]
name = "fpds"
authors = [{name = "Derek Herincx", email = "derek663@gmail.com"}]
description = "A parser for the Federal Procurement Data System (FPDS) Atom feed"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["fpds", "python", "atom feed", "cli", "xml"]
version = "1.4.1"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.9.2,<4.0.0",
    "click>=8.1.3,<9.0.0",
    "tqdm>=4.67.1,<5.0.0",
]

[project.urls]
Repository = "https://github.com/dherincx92/fpds"
Issues = "https://github.com/dherincx92/fpds/issues"

[project.optional-dependencies]
dev = [
    "ipdb==0.13.9",
    "ipython==8.5.0",
    "ruff==0.12.1",
    "mypy>=0.910",
    "types-tqdm==4.64.7.9"
]
tests = [
  "pytest==7.1.3",
  "pytest-cov==3.0.0",
  "pytest-runner==6.0.0",
]
packaging = [
    "build==0.8.0",
    "wheel==0.37.1",
    "twine==5.1.1",
]
all = [
    "fpds[dev]",
    "fpds[tests]",
    "fpds[packaging]",
]

[project.scripts]
fpds = "fpds.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fpds = ["*.json"]

[build-system]
requires = [
    'setuptools >= 44',
    'wheel >= 0.30',
    'setuptools_scm[toml]>=3.4',
]

[tool.ruff]
line-length = 88
indent-width = 4
# include = '\.pyi?$'
# exclude = '''
# /(
#     \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | buck-out
#   | build
#   | dist
# )/
# '''

[tool.ruff.lint]
select = ["E", "F"]
ignore = [  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
branch = false

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = false
