[metadata]
name = fpds
version = 0.0.4
author = Derek Herincx
author_email = derek663@gmail.com
description = A parser for the Federal Procurement Data System (FPDS) Atom feed
keywords = fpds python atom cli
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.8

[semantic_release]
version_variable = src/fpds/__init__.py:__version__

[options]
python_requires = >=3.8
package_dir=
  =src
packages= find:
install_requires =
    click==8.1.3
    requests==2.28.1
    tqdm==4.64.1

[options.packages.find]
where=src

[options.package_data]
fpds.constants =
    *.json

[options.extras_require]
dev =
    ipdb==0.13.9
    ipython==8.5.0
    black>=21.6b0
    flake8>=3.9.2
    isort>=5.9.3
    mypy>=0.910
    pytest>=6.2.4
    pytest-cov>=2.12.1
    pytest-runner>=5.3.1
    types-requests==2.27.31
    types-tqdm==4.64.7.9
packaging =
    build==0.8.0
    wheel==0.37.1
    twine==4.0.1
all =
    %(dev)s

[options.entry_points]
console_scripts =
    fpds = fpds.cli:cli

[aliases]
# Define setup.py command aliases here
test = pytest